tests/compile_fail/ktstr_test_workers_per_cgroup_zero.rs
use ktstr::ktstr_test;

#[ktstr_test(workers_per_cgroup = 0)]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
